Remove transitions/timers to avoid flickering

--- a/styles/question.css
+++ b/styles/question.css
@@ -144,14 +144,14 @@
   margin: 0 1em;
   max-height: 0;
   opacity: 0;
-  transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
+  /*transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);*/
 }
 
 .h5p-question-feedback.h5p-question-visible {
   opacity: 40%;
   margin: 1em;
   opacity: 1;
-  transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
+  /*transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;*/
 }
 .h5p-question-feedback-content {
   font-size: 1em;
@@ -174,9 +174,9 @@
   margin-left: 1em;
   margin-right: 0.5em;
   margin-bottom: 1em;
-  max-height: 0;
-  opacity: 0;
-  transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
+  max-height: none;
+  opacity: 1;
+  /*transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);*/
 }
 .h5p-question-buttons .h5p-joubelui-button,
 .h5p-question-buttons .h5p-joubelui-button:first-child:last-child {
@@ -193,11 +193,11 @@
   width: calc(100% - 1.5em);
 }
 
-.h5p-question-buttons.h5p-question-visible {
+/*.h5p-question-buttons.h5p-question-visible {
   max-height: none;
-  opacity: 1;
-  transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
-}
+  opacity: 1;*/
+  /*transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;*/
+/*}*/
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-buttons {
   height: 3.14286em;
